Added S3 gem, tried to seed with attached photo from assets folder, entered new AWS credentials as receiving errors, db cannot seed atm

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,1 +1,6 @@
 <h1>Add a listing</h1>
+
+<div>
+  <%= form.label :photo %> 
+  <%= form.file_field :photo, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
+</div>
