--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,9 +8,21 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+  <div class="field">
+    <%= f.label :bio %><br />
+    <%= f.text_area :bio, autocomplete: "bio" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :profile_photo %><br />
+    <%= f.file_field :profile_photo, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+  <p>-------------------------------------------</p>
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
@@ -26,6 +38,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <p>-------------------------------------------</p>
+
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
@@ -35,6 +49,8 @@
     <%= f.submit "Update" %>
   </div>
 <% end %>
+
+<p>-------------------------------------------</p>
 
 <h3>Cancel my account</h3>
 
