--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,18 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+
+<p>
+On this page... 
+
+Nav Bar: About Us, Find Produce, Share Produce, Signup/in 
+<br>
+hero image and banner with links to share or find 
+
+under that 
+<br>
+why it's great paragraph
+<br>
+then 
+
+SIGN UP button again
+</p>
