--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,3 @@
-
 <h1>Show Listing</h1>
 
 <h5> <%= @listing.title %></h5>
@@ -10,3 +9,5 @@
 <p><strong>Grower: </strong><%= @listing.user.first_name %></p>
 
 <%= image_tag @listing.photo if @listing.photo.attached? %>
+
+<%= link_to "Back", :back %>
