--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -18,14 +18,17 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="listings">Find Produce</a>
+        <a class="nav-link" href="/listings">Find Produce</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="listings/new">Share Produce</a>
+        <a class="nav-link" href="/listings/new">Share Produce</a>
       </li>
 
     <% if user_signed_in? %>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/edit">User Profile</a>
+      </li>
       <li class="nav-item nav-link">
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
       </li>
