Cancancan gem installed and configured, users cannot edit or delete listings unless they are their own, added another produce listing in seed file to test different users

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,4 +10,11 @@
 
 <%= image_tag @listing.photo if @listing.photo.attached? %>
 
+<div class="show-edit-delete">
+  <% if can? :edit, @listing %>
+    <%= link_to "Edit", edit_listing_path(@listing.id) %>
+    <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
+    <% end %>
+</div>
+
 <%= link_to "Back", :back %>
