--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,8 +3,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
 <%# supposed to be the logo: %>
-  <a class="navbar-brand" href="/"><img src="/app/assets/images/logo.png" width="30" height="30" alt="LocalVore">
-</a>
+  <%# <a class="navbar-brand" href="/"><img src="/app/assets/images/logo.png" width="30" height="30" alt="LocalVore">
+</a> %>
 
 <%# hamburger is working: %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
