Trying to add select dropdown countries cities

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,25 @@
   </div>
 
   <div class="field">
+    <!-- Country -->
+    <%= label_tag :country %>
+    <%= select_tag :country, options_for_select(CS.countries.map { |c| [c[1], c[0]] } ) %>
+  </div>
+
+  <div class="field">
+    <!-- State -->
+    <%= label_tag :state %>
+    <%= select_tag :state, options_for_select([]) %>
+  </div>
+
+  <%# <div class="field">
+    <!-- City -->
+    <%= f.label :city %>
+    <%# <%= f.select :city, options_for_select([]) %> %>
+  <%# </div> %> %>
+
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
