--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,7 +1,59 @@
+<div class="container-fluid">
 <h1>All Listings</h1>
 
-<% @listings.each do |listing| %>
+<!-- <% @listings.each do |listing| %>
   <p><%= link_to listing.title, listing_path(listing) %></p>
+<% end %> -->
+
+<% @listings.each do |listing| %>
+
+<div class="card" style="width: 30rem;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <%# <img src="..." class="card-img" alt="..."> %>
+
+        <%= image_tag((listing.photo), :class => "img-thumbnail") if listing.photo.attached? %>
+
+
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"> <%= listing.title %> </h5>
+        <h6 class="card-subtitle mb-2 text-muted"> $<%= listing.price %> / <%= listing.uom.unit %></h6>
+        <h6 class="card-subtitle mb-2 text-muted"> Qty Avail: <%= listing.qty %> </h6>
+
+        <p class="card text-justify">Description: <%= listing.description %> </p>
+        <p class="card text-justify">Grower: <%= listing.user.first_name %> </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+
+        <p class="card-text"><small class="text-muted"> Category: <%= listing.category.name %> (<%= listing.subcategory.name %>)</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <% end %>
 
+
 <%= link_to "Back", :back %>
+</div>
+
+
+<!-- <div class="card" style="width: 30rem;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="..." class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+
+        <p class="card text-justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div> -->
