--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -10,15 +10,20 @@
 <div class="card" style="width: 30rem;">
   <div class="row no-gutters">
     <div class="col-md-4">
+
+  <%# The below link to helper allows the photo or listing title to be clicked on which will take you to view that product singurlarly in "show" %>
+    <%= link_to listing_path(listing) do %>
+
       <%# <img src="..." class="card-img" alt="..."> %>
 
-        <%= image_tag((listing.photo), :class => "img-thumbnail") if listing.photo.attached? %>
+      <%= image_tag((listing.photo), :class => "img-thumbnail") if listing.photo.attached? %>
 
 
     </div>
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"> <%= listing.title %> </h5>
+        <% end %>
         <h6 class="card-subtitle mb-2 text-muted"> $<%= listing.price %> / <%= listing.uom.unit %></h6>
         <!-- <h6 class="card-subtitle mb-2 text-muted"> Qty Avail: <%= listing.qty %> </h6> -->
         
