--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,10 +11,17 @@
 <%= image_tag((@listing.photo), :class => "img-thumbnail") if @listing.photo.attached? %>
 
 <div class="show-edit-delete">
+
   <% if can? :edit, @listing %>
     <%= link_to "Edit", edit_listing_path(@listing.id) %>
     <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
     <% end %>
+
+<%# when add sold boolean need to add && @listing.sold == false %>
+  <% if user_signed_in? && @listing.user.id != current_user.id %>
+    <%= link_to "Add to Cart", carts_path(listing_id: @listing.id), method: :post %>
+  <% end %>
+
 </div>
 
 <%= link_to "Back", :back %>
