--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -27,6 +27,9 @@
 
     <% if user_signed_in? %>
       <li class="nav-item">
+        <a class="nav-link" href="/carts">🛒</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/users/edit">User Profile</a>
       </li>
       <li class="nav-item nav-link">
