--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -14,13 +14,9 @@
   <%# The below link to helper allows the photo or listing title to be clicked on which will take you to view that product singurlarly in "show" %>
     <%= link_to listing_path(listing) do %>
 
-  <%# The below if logic will display the uploaded photo with the listing unless no photo was uploaded - then a default sketch of a collection of veggies is displayed instead: %>
-    <% if listing.photo.attached? %>
-      <%= image_tag((listing.photo), :class => "img-thumbnail") if listing.photo.attached?  %>
-    <% else %>
-      <%= image_tag(listing.default_image, class: 'card-img-top img-fluid') %>
-    <% end %>
-
+  <div class="show-image">
+    <%= render "image-logic", listing: listing %>
+  </div>
 
     </div>
     <div class="col-md-8">
