--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -14,6 +14,7 @@
   <%# The below link to helper allows the photo or listing title to be clicked on which will take you to view that product singurlarly in "show" %>
     <%= link_to listing_path(listing) do %>
 
+  <%# The below renders the partial to handle image display %>
   <div class="show-image">
     <%= render "image-logic", listing: listing %>
   </div>
