Implemented webhook code, need cart total and to change payments controller to use cart not listings

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -8,6 +8,8 @@
 
 <%# ADD IN A PAYMENT TOTAL %>
 
+<%# <%= @cart.calculate_total_price %> %>
+
 <%# MAKE SURE ONLY THE SAME GROWER IS COMBINED TOGETHER %>
 
 <%= link_to "Pay for Cart", "", id: "stripe" %>
