Ransack gem installed and slowly setting up logic and views to sort by price/title in alpha as well as search by category name (veg/fruit) or by suburb, not all working as yet

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/sidebar" %>
+
 <div class="container-fluid">
 <h1>All Listings</h1>
 
@@ -44,7 +46,7 @@
 <% end %>
 
 
-<%= link_to "Back", :back %>
+<%= render "shared/back" %>
 </div>
 
 
