--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -9,12 +9,24 @@
 <p>Search all produce:</p>
 <%= search_form_for @q do |f| %>
 
-  <%= f.search_field :title_cont, placeholder: "Search by item ie. 'lemon'" %>
+  <%= f.search_field :title_or_description_cont, placeholder: "Search by keyword" %>
   <%= f.submit %>
+<% end %>
+
+<br>
+THE SUBURB SEARCH IS NOT WORKING:
+
+<%# THIS IS NOT WORKING: %>
+
+<%= search_form_for @q do |f| %>
+  <%= f.fields_for :location do |loc| %>
+    <%= loc.search_field :suburb_cont, placeholder: "Search by suburb"%>
+  <%= f.submit %>
+<% end %>
+
 <% end %>
 </div>
 
-<%# NESTED SEARCHING FOR SUBURB - HOW DO I DO THIS  %>
 
 <br>
 <p>View Produce by Category: 
@@ -30,3 +42,4 @@
     <%= f.submit %>
   <% end %>
 </p>
+
