--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,8 +8,17 @@
 <%= search_form_for @q do |f| %>
   <%= f.search_field :title_or_description_cont, placeholder: "Search by keyword" %>
   <%= f.submit %>
+  <% end %>
 
 <br><br>
+
+<%= search_form_for @q do |f| %>
+  <%= f.search_field :user_location_suburb_cont, placeholder: "Search by Suburb" %>
+  <%= f.submit %>
+<% end %>
+
+<br><br>
+<%= search_form_for @q do |f| %>
   <%= f.label :user_location_suburb_eq, "Search by Suburb: " %>
   <%= f.select :user_location_suburb_eq, options_for_select(Location.search_select_options) %>
   <%= f.submit %>
