--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,11 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-<%# supposed to be the logo: %>
-  <%# <a class="navbar-brand" href="/"><img src="/app/assets/images/logo.png" width="30" height="30" alt="LocalVore">
-</a> %>
-
-<%# hamburger is working: %>
+<%# The below bootstrap code implements the 'hamburger' collapsible menu: %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,19 +36,6 @@
         <a class="nav-link" href="/users/sign_in">Login</a>
       </li>
     <% end %>
-
-      <%# <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> %>
-
     </ul>
   </div>
 </nav>
