--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,11 +3,19 @@
 <p>
 On this page... 
 
-<img src="app/assets/images/Logo-WhiteBG.png" class="img-fluid" alt="LocalVore Logo">
 
-<img src="/assets/images/basil.png" />
+<%= image_tag('logo.png', class: 'logo') %>
 
 <br>
+
+
+<div class="hero-img img-fluid">
+  <div>
+    <h1>Find Produce Near You</h1>
+  </div>
+</div>
+
+
 hero image and banner with links to share or find 
 <br>
 under that 
