Add passwords and setup instructions in README, add subtitle to welcome page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,12 +1,5 @@
-// * {
-//   font-family: "Times New Roman", Times, serif; 
-// }
-
-// * {
-//   background-color: green;
-// }
-
-.localvore {
-  font-family: 'Handlee', cursive;
-  font-size: 30px;
+* {
+  // font-family: "Times New Roman", Times, serif; 
+  margin-left: 2px;
 }
+
