--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,3 +13,8 @@
   background-color: #464646;
   vertical-align: middle;
 }
+
+.subtitle {
+  font-family: 'Handlee', cursive;
+  font-size: 18px;
+}
