--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,7 @@
-<h1>Welcome</h1>
+<p class="subtitle">buy, sell & swap locally grown, fresh produce</div>
 
-<p>
-On this page... 
+<%# <%= image_tag('logo.png', class: 'logo') %>
 
-
-<%= image_tag('logo.png', class: 'logo') %>
-
-<br>
 
 
 <div class="hero-img img-fluid">
