Initial setup of side bar on index and show pages for search and filter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
   </head>
 
   <body>
-  <%= render "shared/nav" %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <%= render "shared/nav" %>
+      <div class="container container-fluid">
+        <%= render "shared/sidebar" %>
+          <div class="content">
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+          <%= yield %>
+        </div>
+      </div>
   </body>
 </html>
