--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,8 +1,10 @@
 <div class="sidebar">
+  <div class="sidebar-content">
 
-<p>Sort By: <%= sort_link(@q, :title, default_order: :asc) %></p>
-<p>Sort By: <%= sort_link(@q, :price, default_order: :asc) %></p>
+    <p>Sort By: <%= sort_link(@q, :title, default_order: :asc) %></p>
+    <p>Sort By: <%= sort_link(@q, :price, default_order: :asc) %></p>
 
+</div>
 --- 
 <p>Search all produce:</p>
 <%= search_form_for @q do |f| %>
