Updated jquery as hamburger menu broke. Added buttons for links on Welcome page and subtitle with flex box layout

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,7 @@
+<div class="container container-fluid">
+  <%= render "shared/sidebar" %>
+    <div class="content">
+
 <% if flash[:success] %>
   <p><%= flash[:success] %></p>
 <% end %>
@@ -31,3 +35,7 @@
 </div>
 
 <%= render "shared/back" %>
+
+</div>
+</div>
+</div>
