--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,7 @@
 
 .hero-img {
   width: 100%;
-  height: 550px;
+  height: 600px;
   background-image: url(sharing-hands-trans.png);
   background-position: center center;
   background-repeat: no-repeat;
@@ -12,9 +12,21 @@
   background-attachment: fixed;
   background-color: #464646;
   vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .subtitle {
   font-family: 'Handlee', cursive;
-  font-size: 18px;
+  font-size: 40px;
+  // justify-content: center;
+  // vertical-align: middle;
+  margin: 15px;
+  margin-bottom: 25px;
+}
+
+.hero-buttons {
+
 }
