--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,12 @@
 
   <body>
     <%= render "shared/nav" %>
-      <div class="container container-fluid">
-        <%= render "shared/sidebar" %>
-          <div class="content">
-            <p class="notice"><%= notice %></p>
-            <p class="alert"><%= alert %></p>
-          <%= yield %>
-        </div>
-      </div>
+    <% if notice %>
+        <p class="notice"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
+    <%= yield %>
   </body>
 </html>
