--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,7 @@
-<div class="container-fluid">
+<div class="container container-fluid">
+  <%= render "shared/sidebar" %>
+    <div class="content">
+
 <h1>All Listings</h1>
 
 <% @listings.each do |listing| %>
@@ -42,7 +45,8 @@
 
 <%= render "shared/back" %>
 </div>
-
+</div>
+</div>
 
 <!-- <div class="card" style="width: 30rem;">
   <div class="row no-gutters">
