--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,3 @@
-<%# Home / Find Produce / Share Produce / Sign Up  %>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
 <%# The below bootstrap code implements the 'hamburger' collapsible menu: %>
@@ -15,9 +13,9 @@
  
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <%# <li class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li> %>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link" href="/listings">Find Produce</a>
