Created footer, inserted why text and styled welcome page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -24,9 +24,22 @@
   // justify-content: center;
   // vertical-align: middle;
   margin: 15px;
-  margin-bottom: 25px;
+  margin-bottom: 150px;
 }
 
-.hero-buttons {
+.sign-up {
+  margin-top: 80px; 
+  font-size: 20px;
+  background-color: rgba(248,249,250,0.4);
+  border-radius: 5px;
+  padding: 5px 0 5px 0;
+  font-family: 'Handlee', cursive;
 
+}
+
+.why-text {
+  margin: 20px 20px 0 20px;
+  font-family: 'Handlee', cursive;
+  text-align: center;
+  font-size: 18px;
 }
