--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -4,7 +4,17 @@
   justify-content: space-between;
   align-items: center;
   width: 300px;
-  height: 700px;
-  background-color: green;
+  height: 600px;
   margin-top: 40px;
 }
+
+.sidebar-content {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+.search {
+  margin: 50px 0 30px 0;
+}
+
