--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,41 +2,49 @@
   <%= render "shared/sidebar" %>
     <div class="content">
 
-<h1>All Listings</h1>
+<h2>All Listings</h2>
+<div class="sorting">
+  <p class="sorting-links">Sort By: <%= sort_link(@q, :title, default_order: :asc) %></p>
+  <p class="sorting-links">Sort By: <%= sort_link(@q, :price, default_order: :asc) %></p>
+</div>
 
 <% @listings.each do |listing| %>
 
 <div class="card" style="width: 30rem;">
   <div class="row no-gutters">
-    <div class="col-md-4">
+    <div class="col-md-12">
 
   <%# The below link to helper allows the photo or listing title to be clicked on which will take you to view that product singurlarly in "show" %>
     <%= link_to listing_path(listing) do %>
 
   <%# The below renders the partial to handle image display %>
-  <div class="show-image">
-    <%= render "image-logic", listing: listing %>
+  <div class="card-top">
+    <div class="index-image">
+      <%= render "image-logic", listing: listing %>
+    </div>
+    <div class="card-top-text">
+      <h5 class="card-title"> <%= listing.title %> </h5>
+      <% end %>
+      <h6 class="card-subtitle mb-2 text-muted"><%= number_to_currency(listing.price) %> / <%= listing.uom.unit %></h6>
+      <p class="card-text"><small class="text-muted"> Category: <%= listing.category.name %> (<%= listing.subcategory.name %>)</small></p>
+      <p class="card-text">Description: <%= listing.description %> </p>
+      </div>
   </div>
 
-    </div>
-    <div class="col-md-8">
+  </div>
+
+    <div class="col-md-12">
       <div class="card-body">
-        <h5 class="card-title"> <%= listing.title %> </h5>
-        <% end %>
-        <h6 class="card-subtitle mb-2 text-muted"><%= number_to_currency(listing.price) %> / <%= listing.uom.unit %></h6>
+
         <!-- <h6 class="card-subtitle mb-2 text-muted"> Qty Avail: <%= listing.qty %> </h6> -->
-        
-        <p class="card-text"><small class="text-muted"> Category: <%= listing.category.name %> (<%= listing.subcategory.name %>)</small></p>
 
-        <p class="card text">Description: <%= listing.description %> </p>
-        <p class="text">📍<%= listing.user.location.suburb %> </p>
-        <p class="text">Grown by: <%= listing.user.first_name %>  </p>
-        
+      <p class="text">📍<%= listing.user.location.suburb %> </p>
+      <p class="text">Grown by: <%= listing.user.first_name %> 
         <%# **** NEED TO SETUP UP LINK TO VIEW ALL GROWERS PRODUCE LISTINGS *****%>
-        <a href="#" class="btn btn-primary">View All <%= listing.user.first_name %>'s Produce</a>
-
-      </div>
+      <a href="#" class="btn btn-light">View All <%= listing.user.first_name %>'s Produce</a>
+      </div> </p>
     </div>
+
   </div>
 </div>
 
@@ -48,7 +56,7 @@
 </div>
 </div>
 
-<!-- <div class="card" style="width: 30rem;">
+<%# <div class="card" style="width: 30rem;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="..." class="card-img" alt="...">
@@ -65,4 +73,4 @@
       </div>
     </div>
   </div>
-</div> -->
+</div> %>
