Added filter by grower name to sidenav and removed Home from nav bar as duplicated within Localvore

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,9 +13,9 @@
  
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <%# <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
+      </li> %>
 
       <li class="nav-item">
         <a class="nav-link" href="/listings">Find Produce</a>
@@ -30,7 +30,7 @@
         <a class="nav-link" href="/carts">🛒</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/users/edit">User Profile</a>
+        <a class="nav-link" href="/users/edit">Profile</a>
       </li>
 
     <%# looks good but method doesnt work %>
