Added reset search filters link and function, updating index page to alter view of grown by/location

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -38,10 +38,11 @@
 
         <!-- <h6 class="card-subtitle mb-2 text-muted"> Qty Avail: <%= listing.qty %> </h6> -->
 
-      <p class="text">📍<%= listing.user.location.suburb %> </p>
-      <p class="text">Grown by: <%= listing.user.first_name %> 
+      <p class="text">📍<%= listing.user.location.suburb %> </p>    
+      <p class="text"> 👨‍🌾 Grown by: <%= listing.user.first_name %> </p>
+
         <%# **** NEED TO SETUP UP LINK TO VIEW ALL GROWERS PRODUCE LISTINGS *****%>
-      <a href="#" class="btn btn-light">View All <%= listing.user.first_name %>'s Produce</a>
+      <!-- <a href="#" class="btn btn-light">View All <%= listing.user.first_name %>'s Produce</a> -->
       </div> </p>
     </div>
 
