--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -44,6 +44,9 @@
       <%= f.submit %>
       <% end %>
    </p>
+
+  <%= link_to "Reset Search Filters", listings_path %>
+
     </div>
   </div>
 </div>
