Installed rails_12factor gem to fix delete method not working with heroku

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -31,7 +31,7 @@
 
   <% if can? :edit, @listing %>
     <%= link_to "Edit", edit_listing_path(@listing.id) %>
-    <%= link_to "Delete", listing_path(@listing.id), method: "delete" %>
+    <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
     <% end %>
 
 <%# when add sold boolean need to add && @listing.sold == false %>
